Fix header on narrow screens

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -428,6 +428,11 @@ header a:hover {
     }
     header {
         padding: 0 0 1em;
+        grid-template-columns: 50% 50%;
+    }
+
+    header h1 {
+        grid-column: 1 / 3;
     }
     #comments ul {
         border-width: 1px 0;
